Feat: Finalizado a nova lógica de adição de registros
Falta apenas adicionar no lote